# KinesisRS

./: .env.example  .gitignore  Cargo.toml  README.md  README_JA.md  README_ZH.md  SECURITY.md
.github/workflows/: release.yml
docs/: MCP_VERSION_CHANGELOG.md  README.md  README_JA.md  README_KO.md  README_TW.md  README_ZH.md  ROADMAP.md  agent_prompt_template.md  architecture.md  index.md
docs/guides/: bsc_usage.md
skills/trading-skill/: SKILL.md  check_config.cjs  setup.md  usage-guide_EN.md  usage-guide_JA.md  usage-guide_KO.md  usage-guide_ZH.md
src/: cli.rs  config.rs  lib.rs  main.rs  types.rs
src/bsc/: executor.rs  mod.rs
src/mcp/: errors.rs  mod.rs  protocol.rs  stdio_transport.rs  tool_registry.rs  types.rs
src/mcp/tools/: balance.rs  buy.rs  config.rs  detect.rs  mod.rs  quote.rs  sell.rs  wallet.rs
src/solana/: detector.rs  executor.rs  mod.rs
tests/: cli_validation.rs
toolkit/: README.md
toolkit/skills/kinesis-agent/: ROADMAP.md  SKILL.md  SKILL_EN.md  SKILL_ES.md  SKILL_JA.md  SKILL_KO.md  SKILL_PT.md
toolkit/skills/kinesis-agent/adapters/: claude.md  gemini.md  openclaw.md  opencode.md
toolkit/skills/kinesis-agent/references/: error-codes.md  error-codes_EN.md  error-codes_ES.md  error-codes_JA.md  error-codes_KO.md  error-codes_PT.md  network-matrix.md  network-matrix_EN.md  network-matrix_ES.md  network-matrix_JA.md  network-matrix_KO.md  network-matrix_PT.md  trading-api.md  trading-api_EN.md  trading-api_ES.md  (+3 more)
toolkit/skills/trading-skill/: SKILL.md  SKILL_ES.md  SKILL_JA.md  SKILL_KO.md  SKILL_PT.md  SKILL_ZH.md
(+21 files in other folders)
