[package]
name = "kinesis-rs"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
anyhow = "1.0"
url = "2.5"
reqwest = { version = "0.12.28", features = ["json", "socks"] }
futures = "0.3"
base64 = "0.21"
bincode = "1.3"

# Solana - Zero Conflict Path (Manual Borsh Parsing)
borsh = { version = "1.6.0", features = ["derive"] }
bs58 = "0.5"

# Alloy meta-crate (Reverted to 0.8.3 for extreme stability)
alloy = { version = "0.8.3", features = ["full"] }

# Explicitly add these to help sol! macros resolve top-level package names
alloy-sol-types = "0.8.26"
alloy-primitives = "0.8.26"
alloy-contract = "0.8.3"
solana-sdk = "4.0.1"
spl-associated-token-account = "8.0.0"
rand = "0.9.2"

# History storage
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

# MCP
async-trait = "0.1"
async-recursion = "1.1"

[dev-dependencies]
mockito = "1.4.0"
assert_cmd = "2.0"
predicates = "3.1"

# History storage
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
